--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en-us">
 <head>
-  <title>Your Name</title>
+  <title>Tanner Grant</title>
 </head>
 <body>
- <h1>Your Name</h1>
+ <h1>Tanner Grant</h1>
 </body>
 </html>  
